@@ -63,7 +63,6 @@ public class ExtensionsProcessor {
                 && launchModeBuildItem.getDevModeType().get().equals(DevModeType.LOCAL)) {
 
             BuildTimeActionBuildItem buildTimeActions = new BuildTimeActionBuildItem(NAMESPACE);
-
             getCategories(buildTimeActions);
             getInstallableExtensions(buildTimeActions);
             getInstalledNamespaces(buildTimeActions);
@@ -145,6 +144,8 @@ public class ExtensionsProcessor {
                     }
 
                     return null;
+                } catch (IllegalStateException e) {
+                    return null;
                 } catch (QuarkusCommandException e) {
                     throw new RuntimeException(e);
                 }
@@ -198,7 +199,13 @@ public class ExtensionsProcessor {
     }
 
     private QuarkusProject getQuarkusProject() {
-        Path projectRoot = Paths.get(System.getProperty("user.dir")).toAbsolutePath().normalize();
+        Path projectRoot;
+        String gradlePath = System.getProperty("gradle.project.path");
+        if (gradlePath != null) {
+            projectRoot = Path.of(gradlePath);
+        } else {
+            projectRoot = Paths.get(System.getProperty("user.dir")).toAbsolutePath().normalize();
+        }
         return QuarkusProjectHelper.getCachedProject(projectRoot);
     }
 
